--- a/src/style.html
+++ b/src/style.html
@@ -48,19 +48,63 @@
             </ul>
         </div>
     </div>
-       
+
     <div class="bigcard-container">
         <div class="bigcard">
             <video autoplay muted loop class="background-video">
-              <source src="assets/bigmp4.mp4" type="video/mp4">
+                <source src="assets/bigmp4.mp4" type="video/mp4">
             </video>
-            <p class="top-text">CURATED PLAYLIST</p>
-            <h1>Wave to <br>Earth</h1>
-            <p class="minitext">Songs like  “Seasons”, “Love”<br> and “Sunny Days”</p>
-          </div>
+            <div class="bigcard-text">
+                <p class="top-text">CURATED PLAYLIST</p>
+                <h1>Wave to <br>Earth</h1>
+                <p class="minitext">Songs like “Seasons”, “Love”<br> and “Sunny Days”</p>
+                <p class="numberstext"><img src="assets/Heart.png" alt="">1,025,492 Likes</p>
+            </div>
+        </div>
     </div>
 
+    <div class="bottom-musiclist-container">
+        <div class="bottom-musiclist">
+            <div class="musicbox1">
+                <img src="assets/image.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="musicbox2">
+                <img src="assets/image5.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="musicbox3">
+                <img src="assets/image6.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="musicbox4">
+                <img src="assets/image7.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="musicbox5">
+                <img src="assets/image6.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="musicbox5">
+                <img src="assets/image6.png" alt="">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+        </div>
+    </div>
 
+<footer>
+    <div class="footer-container">
+        <div class="longcard">
+            
+        </div>
+    </div>
+</footer>
 </body>
 <script src="style.js"></script>
 
