--- a/src/style.html
+++ b/src/style.html
@@ -101,7 +101,19 @@
 <footer>
     <div class="footer-container">
         <div class="longcard">
-            
+            <div class="music-card"></div>
+            <div class="minitext-footer">
+                <h1>Seasons</h1>
+                <p>Wave to earth</p>
+            </div>
+            <div class="long-stick"></div>
+            <div class="buttons-musics">
+                <img src="assets/Shuffle (1).png" alt="" class="shuffle">
+                <img src="assets/left.png" alt="" class="left">
+                <img src="assets/pause-circle.png" alt="" class="pause-button">
+                <img src="assets/right.png" alt="" class="right">
+                <img src="assets/arrows-repeat.png" alt="" class="repeat">
+            </div>
         </div>
     </div>
 </footer>
