--- a/src/intro.html
+++ b/src/intro.html
@@ -15,13 +15,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
     }
 
     img{
         position: relative;
-        top: 150px;
-        width: 700px;
-        height: 500px;
+        top: 50px;
+        width: 1400px;
+        height: 900px;
     }
 </style>
 <script>
