--- a/src/style.html
+++ b/src/style.html
@@ -52,11 +52,11 @@
     <div class="bigcard-container">
         <div class="bigcard">
             <video autoplay muted loop class="background-video">
-                <source src="assets/bigmp4.mp4" type="video/mp4">
+                <source src="assets/bigmp4.mp4" type="video/mp4" id="bigcard">
             </video>
             <div class="bigcard-text">
                 <p class="top-text">CURATED PLAYLIST</p>
-                <h1>Wave to <br>Earth</h1>
+                <h1 class="bigtitle-card">Wave to <br>Earth</h1>
                 <p class="minitext">Songs like “Seasons”, “Love”<br> and “Sunny Days”</p>
                 <p class="numberstext"><img src="assets/Heart.png" alt="">1,025,492 Likes</p>
             </div>
@@ -66,7 +66,8 @@
     <div class="bottom-musiclist-container">
         <div class="bottom-musiclist">
             <div class="musicbox1">
-                <img src="assets/image.png" alt="">
+                <img src="assets/image.png" alt="" class="music-img1" id="playbutton">
+                <!-- <audio src="audio/Take A Slice.mp3" type="audio/mpeg" id="mymusic"></audio> -->
                 <h1>Seasons</h1>
                 <p>Wave to earth</p>
             </div>
@@ -103,14 +104,15 @@
         <div class="longcard">
             <div class="music-card"></div>
             <div class="minitext-footer">
-                <h1>Seasons</h1>
-                <p>Wave to earth</p>
+                <h1 class="minititle_footer">Die With A Smile</h1>
+                <p class="minitext_footer">By Lady Gaga and Bruno Mars</p>
             </div>
             <div class="long-stick"></div>
             <div class="buttons-musics">
                 <img src="assets/Shuffle (1).png" alt="" class="shuffle">
                 <img src="assets/left.png" alt="" class="left">
-                <img src="assets/pause-circle.png" alt="" class="pause-button">
+                <img src="assets/pause-circle.png" alt="" class="pause-button" id="playbutton-music" style="cursor:pointer;">
+                <audio src="audio/Lady Gaga, Bruno Mars - Die With A Smile (Official Music Video).mp3" type="audio/mpeg" id="mymusic"></audio>
                 <img src="assets/right.png" alt="" class="right">
                 <img src="assets/arrows-repeat.png" alt="" class="repeat">
             </div>
