--- a/src/login.html
+++ b/src/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
+    <div class="video">
+        <video autoplay muted loop playsinline id="background-video">
+            <source src="assets/bgmp4.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+
         <div class="bigcard-container">
             <div class="bigcard">
                 <div class="text-with-logo">
@@ -29,6 +37,56 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="bigcard-container-register">
+            <div class="bigcard-register">
+                <div class="text-with-logo-register">
+                    <img src="assets/spotify (1).png" alt="">
+                    <h1>WhimsiCloud</h1>
+                </div>
+                <h1 id="signin-register">Sign up</h1>
+                <p class="signup-register">Already have an account? Sign in</p>
+                <div class="inputs-register">
+                    <input type="text" name="username" id="username-register" placeholder="Username">
+                    <input type="email" name="email" id="email-register" placeholder="Email">
+                    <input type="password" name="password" id="password-register" placeholder="Password">
+                    <button type="submit" name="submit" id="submit-register">SIGN UP</button>
+                </div>
+                <div class="forgot-password-container-register">
+                    <p class="forgot-password-register">Forgot Password?</p>
+                </div>
+            </div>
+        </div>
+
     </div>
+    <script>
+        var username = document.getElementById("username");
+        var password = document.getElementById("password");
+        var submit = document.getElementById("submit");
+
+        submit.onclick = function () {
+            if (username.value == "admin" && password.value == "admin") {
+                window.location.href = "style.html";
+            } else {
+                alert("Wrong username or password");
+            }
+        }
+
+        var registeraccount = document.querySelector(".signup")
+        var loginaccount = document.querySelector(".signup-register")
+        registeraccount.onclick = function () {
+            document.querySelector(".bigcard-container").style.display = "none";
+            document.querySelector(".bigcard-register").style.display = "block";
+        }
+
+        loginaccount.onclick = function () {
+            document.querySelector(".bigcard-container").style.display = "block";
+            document.querySelector(".bigcard-register").style.display = "none";
+        }
+
+
+    </script>
 </body>
+
 </html>
