--- a/src/style.html
+++ b/src/style.html
@@ -116,6 +116,15 @@
                 <img src="assets/right.png" alt="" class="right">
                 <img src="assets/arrows-repeat.png" alt="" class="repeat">
             </div>
+
+            <div class="rightbuttons-container">
+                <div class="rightbuttons">
+                    <img src="assets/list-music.png" alt="" class="list-music">
+                    <img src="assets/volume.png" alt="" class="volume-icon">
+                    <input type="range" class="slider-volume" id="volume" value="100">
+                    <img src="assets/expand.png" alt="" class="fullscreen">
+                </div>
+            </div>
         </div>
     </div>
 </footer>
